fix article spacing

--- a/public/styles/uno.css
+++ b/public/styles/uno.css
@@ -21,8 +21,8 @@
 
 /* layer: default */
 .m-0{margin:0;}
+.mb-3{margin-bottom:0.75rem;}
 .mr-4{margin-right:1rem;}
-.mt-4{margin-top:1rem;}
 .hidden{display:none;}
 .h-1\/4{height:25%;}
 .h-16{height:4rem;}
@@ -37,10 +37,11 @@
 @keyframes spin{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}
 .animate-spin{animation:spin 1s linear infinite;}
 .cursor-pointer{cursor:pointer;}
+.list-none{list-style-type:none;}
 .items-center{align-items:center;}
 .justify-center{justify-content:center;}
+.gap-2{gap:0.5rem;}
 .gap-3{gap:0.75rem;}
-.gap-4{gap:1rem;}
 .border{border-width:1px;}
 .border-b{border-bottom-width:1px;}
 .border-gray-2{--un-border-opacity:1;border-color:rgb(229 231 235 / var(--un-border-opacity));}
